Done Everything but Sign Up

--- a/express_act_serv/package.json
+++ b/express_act_serv/package.json
@@ -13,7 +13,9 @@
   "author": "Jake Levy",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.12.5",
     "pug": "^3.0.2",
