--- a/express_act_serv/package.json
+++ b/express_act_serv/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.12.5",
+    "nodemailer": "^6.5.0",
     "pug": "^3.0.2",
     "tracker": "file:../../lab4/lab_activity/tracker/tracker-0.1.5.tgz"
   },
